# homeserver

./: .env  .gitignore  Cargo.toml  README.md  rocket.toml
db/: homedb.sqlite
migrations/2019-06-02-203910_create_posts/: up.sql
migrations/2019-06-02-212443_create_logs/: up.sql
migrations/2019-06-07-123923_create_games/: down.sql  up.sql
src/: diesel_test.rs  homedb.rs  main.rs  schema.rs
src/homedb/: companies.rs  consoles.rs  genres.rs  models.rs
static/js/: db_helpers.js
templates/: base.html.tera  companies.html.tera  consoles.html.tera  genres.html.tera  index.html.tera  new_post.html.tera
